--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
-        <h1>Hello, World!</h1>
+        <h1>Awesome Bolg!</h1>
+        <p>Hello, reader. This is my first post on this great blog. I hope you'll like it!</p>
     </body>
 </html>
