--- a/index.html
+++ b/index.html
@@ -2,5 +2,14 @@
     <body>
         <h1>Awesome Bolg!</h1>
         <p>Hello, reader. This is my first post on this great blog. I hope you'll like it!</p>
+        <p>And since you like paragraphs so much, here's another one!</p> 
+        <h2>List of badass comics characters</p>
+            <ul>
+                <li>Batman</li>
+                <li>Batman</li>
+                <li>Batman</li>
+                <li>Bruce Wayne</li>
+                <li>Batman</li>
+            </ul>
     </body>
 </html>
